Reorganise images in directories

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -53,7 +53,7 @@
             </header>
         </div>
         <section class="spotlight">
-            <div class="image projectDirectLinks"><a><img src="/assets/css/images/cryptotracker.png" alt="" /></a>
+            <div class="image projectDirectLinks"><a><img src="/assets/images/projects/cryptotracker.png" alt="" /></a>
             </div>
             <div class="content">
                 <h2>Crypto tracker</h2>
@@ -61,31 +61,31 @@
                 <p>Work in progress</p>
                 <ul style="display: flex;flex-wrap: wrap;justify-content: center;">
                     <li class="language">
-                        <img src="/assets/css/images/languages/spring.svg" alt="">
+                        <img src="/assets/images/skills/technologies/back-end/spring.svg" alt="">
                         <p>Spring boot</p>
                     </li>
                     <li class="language">
-                        <img src="/assets/css/images/languages/postgresql.svg" alt="">
+                        <img src="/assets/images/skills/technologies/back-end/postgresql.svg" alt="">
                         <p>PostgreSQL</p>
                     </li>
                     <li class="language">
-                        <img src="/assets/css/images/languages/angular.svg" alt="">
+                        <img src="/assets/images/skills/technologies/front-end/angular.svg" alt="">
                         <p>Angular</p>
                     </li>
                     <li class="language">
-                        <img src="/assets/css/images/languages/bootstrap.svg" alt="">
+                        <img src="/assets/images/skills/technologies/front-end/bootstrap.svg" alt="">
                         <p>Bootstrap</p>
                     </li>
                     <li class="language">
-                        <img src="/assets/css/images/languages/ngrx.svg" alt="">
+                        <img src="/assets/images/skills/technologies/front-end/ngrx.svg" alt="">
                         <p>NgRx</p>
                     </li>
                     <li class="language">
-                        <img src="/assets/css/images/languages/docker.svg" alt="">
+                        <img src="/assets/images/skills/technologies/environment/docker.svg" alt="">
                         <p>Docker</p>
                     </li>
                     <li class="language">
-                        <img src="/assets/css/images/languages/rabbitmq.svg" alt="">
+                        <img src="/assets/images/skills/technologies/tool/rabbitmq.svg" alt="">
                         <p>RabbitMQ</p>
                     </li>
                 </ul>
@@ -95,34 +95,34 @@
             </div>
         </section>
         <section class="spotlight">
-            <div class="image projectDirectLinks"><a><img src="/assets/css/images/medialistmaker.png" alt="" /></a>
+            <div class="image projectDirectLinks"><a><img src="/assets/images/projects/medialistmaker.png" alt="" /></a>
             </div>
             <div class="content">
                 <h2>Media list maker <a href="#remind-me">(Remind-me v2)</a></h2>
                 <p>Application to create a list of movie to watch and music to listen.</p>
                 <ul style="display: flex;flex-wrap: wrap;justify-content: center;">
                     <li class="language">
-                        <img src="/assets/css/images/languages/spring.svg" alt="">
+                        <img src="/assets/images/skills/technologies/back-end/spring.svg" alt="">
                         <p>Spring boot</p>
                     </li>
                     <li class="language">
-                        <img src="/assets/css/images/languages/postgresql.svg" alt="">
+                        <img src="/assets/images/skills/technologies/back-end/postgresql.svg" alt="">
                         <p>PostgreSQL</p>
                     </li>
                     <li class="language">
-                        <img src="/assets/css/images/languages/angular.svg" alt="">
+                        <img src="/assets/images/skills/technologies/front-end/angular.svg" alt="">
                         <p>Angular</p>
                     </li>
                     <li class="language">
-                        <img src="/assets/css/images/languages/tailwind.svg" alt="">
+                        <img src="/assets/images/skills/technologies/front-end/tailwind.svg" alt="">
                         <p>Tailwind CSS</p>
                     </li>
                     <li class="language">
-                        <img src="/assets/css/images/languages/ngrx.svg" alt="">
+                        <img src="/assets/images/skills/technologies/front-end/ngrx.svg" alt="">
                         <p>NgRx</p>
                     </li>
                     <li class="language">
-                        <img src="/assets/css/images/languages/docker.svg" alt="">
+                        <img src="/assets/images/skills/technologies/environment/docker.svg" alt="">
                         <p>Docker</p>
                     </li>
                 </ul>
@@ -132,14 +132,15 @@
             </div>
         </section>
         <section class="spotlight">
-            <div class="image projectDirectLinks"><a><img src="/assets/css/images/fakeusergenerator.png" alt="" /></a>
+            <div class="image projectDirectLinks"><a><img src="/assets/images/projects/fakeusergenerator.png"
+                        alt="" /></a>
             </div>
             <div class="content">
                 <h2>User data generator</h2>
                 <p>Application to generate standard user datas</p>
                 <ul style="display: flex;flex-wrap: wrap;justify-content: center;">
                     <li class="language">
-                        <img src="/assets/css/images/languages/spring.svg" alt="">
+                        <img src="/assets/images/skills/technologies/back-end/spring.svg" alt="">
                         <p>Spring boot</p>
                     </li>
                 </ul>
@@ -155,23 +156,23 @@
                 <p>Application to manage your job researches</p>
                 <ul style="display: flex;flex-wrap: wrap;justify-content: center;">
                     <li class="language">
-                        <img src="/assets/css/images/languages/spring.svg" alt="">
+                        <img src="/assets/images/skills/technologies/back-end/spring.svg" alt="">
                         <p>Spring boot</p>
                     </li>
                     <li class="language">
-                        <img src="/assets/css/images/languages/angular.svg" alt="">
+                        <img src="/assets/images/skills/technologies/front-end/angular.svg" alt="">
                         <p>Angular</p>
                     </li>
                     <li class="language">
-                        <img src="/assets/css/images/languages/sass.svg" alt="">
+                        <img src="/assets/images/skills/technologies/front-end/sass.svg" alt="">
                         <p>Sass</p>
                     </li>
                     <li class="language">
-                        <img src="/assets/css/images/languages/heroku.svg" alt="">
+                        <img src="/assets/images/skills/technologies/deployment/heroku.svg" alt="">
                         <p>Heroku</p>
                     </li>
                     <li class="language">
-                        <img src="/assets/css/images/languages/surge.svg" alt="">
+                        <img src="/assets/images/skills/technologies/deployment/surge.svg" alt="">
                         <p>Surge</p>
                     </li>
                 </ul>
@@ -190,31 +191,31 @@
                         <h3>Languages</h3>
                         <div style="display:flex;flex-wrap: wrap;">
                             <div class="language">
-                                <img src="/assets/css/images/languages/html.svg" alt="">
+                                <img src="/assets/images/skills/languages/html.svg" alt="">
                                 <p>HTML</p>
                             </div>
                             <div class="language">
-                                <img src="/assets/css/images/languages/css.svg" alt="">
+                                <img src="/assets/images/skills/languages/css.svg" alt="">
                                 <p>CSS</p>
                             </div>
                             <div class="language">
-                                <img src="/assets/css/images/languages/php.svg" alt="">
+                                <img src="/assets/images/skills/languages/php.svg" alt="">
                                 <p>PHP</p>
                             </div>
                             <div class="language">
-                                <img src="/assets/css/images/languages/java.svg" alt="">
+                                <img src="/assets/images/skills/languages/java.svg" alt="">
                                 <p>Java</p>
                             </div>
                             <div class="language">
-                                <img src="/assets/css/images/languages/javascript.svg" alt="">
+                                <img src="/assets/images/skills/languages/javascript.svg" alt="">
                                 <p>Javascript</p>
                             </div>
                             <div class="language">
-                                <img src="/assets/css/images/languages/typescript.svg" alt="">
+                                <img src="/assets/images/skills/languages/typescript.svg" alt="">
                                 <p>Typescript</p>
                             </div>
                             <div class="language">
-                                <img src="/assets/css/images/languages/python.svg" alt="">
+                                <img src="/assets/images/skills/languages/python.svg" alt="">
                                 <p>Python</p>
                             </div>
                         </div>
@@ -223,27 +224,27 @@
                         <h3>Front-end</h3>
                         <div style="display:flex;flex-wrap: wrap;justify-content: center;">
                             <div class="language">
-                                <img src="/assets/css/images/languages/angular.svg" alt="">
+                                <img src="/assets/images/skills/technologies/front-end/angular.svg" alt="">
                                 <p>Angular</p>
                             </div>
                             <div class="language">
-                                <img src="/assets/css/images/languages/ngrx.svg" alt="">
+                                <img src="/assets/images/skills/technologies/front-end/ngrx.svg" alt="">
                                 <p>NgRx</p>
                             </div>
                             <div class="language">
-                                <img src="/assets/css/images/languages/bootstrap.svg" alt="">
+                                <img src="/assets/images/skills/technologies/front-end/bootstrap.svg" alt="">
                                 <p>Bootstrap</p>
                             </div>
                             <div class="language">
-                                <img src="/assets/css/images/languages/tailwind.svg" alt="">
+                                <img src="/assets/images/skills/technologies/front-end/tailwind.svg" alt="">
                                 <p>Tailwind CSS</p>
                             </div>
                             <div class="language">
-                                <img src="/assets/css/images/languages/jekyll.svg" alt="">
+                                <img src="/assets/images/skills/technologies/front-end/jekyll.svg" alt="">
                                 <p>Jekyll</p>
                             </div>
                             <div class="language">
-                                <img src="/assets/css/images/languages/sass.svg" alt="">
+                                <img src="/assets/images/skills/technologies/front-end/sass.svg" alt="">
                                 <p>Sass</p>
                             </div>
                         </div>
@@ -253,23 +254,23 @@
                         <h3>Back-end</h3>
                         <div style="display:flex;flex-wrap: wrap;justify-content: center;">
                             <div class="language">
-                                <img src="/assets/css/images/languages/spring.svg" alt="">
+                                <img src="/assets/images/skills/technologies/back-end/spring.svg" alt="">
                                 <p>Spring Boot</p>
                             </div>
                             <div class="language">
-                                <img src="/assets/css/images/languages/symfony.svg" alt="">
+                                <img src="/assets/images/skills/technologies/back-end/symfony.svg" alt="">
                                 <p>Symfony</p>
                             </div>
                             <div class="language">
-                                <img src="/assets/css/images/languages/api-platform.svg" alt="">
+                                <img src="/assets/images/skills/technologies/back-end/api-platform.svg" alt="">
                                 <p>API-Platform</p>
                             </div>
                             <div class="language">
-                                <img src="/assets/css/images/languages/laravel.svg" alt="">
+                                <img src="/assets/images/skills/technologies/back-end/laravel.svg" alt="">
                                 <p>Laravel</p>
                             </div>
                             <div class="language">
-                                <img src="/assets/css/images/languages/mysql.svg" alt="">
+                                <img src="/assets/images/skills/technologies/back-end/mysql.svg" alt="">
                                 <p>MySQL</p>
                             </div>
                         </div>
@@ -279,15 +280,16 @@
                         <h3>Deployment</h3>
                         <div style="display:flex;flex-wrap: wrap;justify-content: center;">
                             <div class="language">
-                                <img src="/assets/css/images/languages/heroku.svg" alt="">
+                                <img src="/assets/images/skills/technologies/deployment/heroku.svg" alt="">
                                 <p>Heroku</p>
                             </div>
                             <div class="language">
-                                <img src="/assets/css/images/languages/aws.svg" alt="">
+                                <img src="/assets/images/skills/technologies/deployment/aws.svg" alt="">
                                 <p>AWS</p>
                             </div>
                             <div class="language">
-                                <img style="width:25px" src="/assets/css/images/languages/surge.svg" alt="">
+                                <img style="width:25px" src="/assets/images/skills/technologies/deployment/surge.svg"
+                                    alt="">
                                 <p>Surge</p>
                             </div>
                         </div>
@@ -297,20 +299,20 @@
                         <h3>Environments</h3>
                         <div style="display:flex;flex-wrap: wrap;justify-content: center;">
                             <div class="language">
-                                <img src="/assets/css/images/languages/gnu.svg" alt="">
-                                <img src="/assets/css/images/languages/linux.svg" alt="">
+                                <img src="/assets/images/skills/technologies/environment/gnu.svg" alt="">
+                                <img src="/assets/images/skills/technologies/environment/linux.svg" alt="">
                                 <p>GNU-Linux</p>
                             </div>
                             <div class="language">
-                                <img src="/assets/css/images/languages/docker.svg" alt="">
+                                <img src="/assets/images/skills/technologies/environment/docker.svg" alt="">
                                 <p>Docker</p>
                             </div>
                             <div class="language">
-                                <img src="/assets/css/images/languages/mamp.svg" alt="">
+                                <img src="/assets/images/skills/technologies/environment/mamp.svg" alt="">
                                 <p>MAMP</p>
                             </div>
                             <div class="language">
-                                <img src="/assets/css/images/languages/git.svg" alt="">
+                                <img src="/assets/images/skills/technologies/environment/git.svg" alt="">
                                 <p>Git</p>
                             </div>
 
@@ -320,11 +322,11 @@
                         <h3>Tools</h3>
                         <div style="display:flex;flex-wrap: wrap;justify-content: center;">
                             <div class="language">
-                                <img src="/assets/css/images/languages/rabbitmq.svg" alt="">
+                                <img src="/assets/images/skills/technologies/tool/rabbitmq.svg" alt="">
                                 <p>RabbitMQ</p>
                             </div>
                             <div class="language">
-                                <img src="/assets/css/images/languages/jenkins.svg" alt="">
+                                <img src="/assets/images/skills/technologies/tool/jenkins.svg" alt="">
                                 <p>Jenkins</p>
                             </div>
                         </div>
@@ -333,7 +335,7 @@
                         <h3>Others</h3>
                         <div style="display:flex;flex-wrap: wrap;justify-content: center;">
                             <div class="language">
-                                <img src="/assets/css/images/languages/toeic.svg" alt="">
+                                <img src="/assets/images/skills/technologies/other/toeic.svg" alt="">
                                 <p>Toeic: Score of 965 (2021)</p>
                             </div>
                         </div>
@@ -377,7 +379,8 @@
                 <hr>
                 <div style="display:flex;justify-content: space-between;">
                     <div style="display:flex; align-items: center;">
-                        <img style="margin-right: 10px;" width="100px" src="/assets/css/images/Oclock.jpg" alt="">
+                        <img style="margin-right: 10px;" width="100px" src="/assets/images/experiences/Oclock.jpg"
+                            alt="">
                         <h5 style="margin-bottom: 0;">
                             O'clock school
                         </h5>
