--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -2,7 +2,7 @@
 
 <article id="main">
     <header
-        style="background-image: url('/assets/css/images/{{page.image}}-lg.png');background-size: contain;background-position-x: center;background-position-y: center;">
+        style="background-image: url('/assets/images/{{page.image}}-lg.png');background-size: contain;background-position-x: center;background-position-y: center;">
 
     </header>
     <section class="wrapper style5">
