fix display issue for project's technology list

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -53,7 +53,7 @@
             </header>
         </div>
         <section class="spotlight">
-            <div class="image projectDirectLinks"><a><img src="/assets/images/projects/cryptotracker.png" alt="" /></a>
+            <div class="image projectDirectLinks"><a><img src="https://placehold.it/752x532" alt="" /></a>
             </div>
             <div class="content">
                 <h2>Crypto tracker</h2>
@@ -199,10 +199,6 @@
                                 <p>CSS</p>
                             </div>
                             <div class="language">
-                                <img src="/assets/images/skills/languages/php.svg" alt="">
-                                <p>PHP</p>
-                            </div>
-                            <div class="language">
                                 <img src="/assets/images/skills/languages/java.svg" alt="">
                                 <p>Java</p>
                             </div>
@@ -213,10 +209,6 @@
                             <div class="language">
                                 <img src="/assets/images/skills/languages/typescript.svg" alt="">
                                 <p>Typescript</p>
-                            </div>
-                            <div class="language">
-                                <img src="/assets/images/skills/languages/python.svg" alt="">
-                                <p>Python</p>
                             </div>
                         </div>
                     </li>
@@ -258,20 +250,12 @@
                                 <p>Spring Boot</p>
                             </div>
                             <div class="language">
-                                <img src="/assets/images/skills/technologies/back-end/symfony.svg" alt="">
-                                <p>Symfony</p>
-                            </div>
-                            <div class="language">
-                                <img src="/assets/images/skills/technologies/back-end/api-platform.svg" alt="">
-                                <p>API-Platform</p>
-                            </div>
-                            <div class="language">
-                                <img src="/assets/images/skills/technologies/back-end/laravel.svg" alt="">
-                                <p>Laravel</p>
-                            </div>
-                            <div class="language">
                                 <img src="/assets/images/skills/technologies/back-end/mysql.svg" alt="">
                                 <p>MySQL</p>
+                            </div>
+                            <div class="language">
+                                <img src="/assets/images/skills/technologies/back-end/postgresql.svg" alt="">
+                                <p>PostgreSQL</p>
                             </div>
                         </div>
                     </li>
@@ -350,7 +334,10 @@
                 </header>
                 <div style="display:flex;justify-content: space-between;">
                     <div style="display:flex; align-items: center;">
-                        <h5 style="margin-bottom: 0;">Capgemini
+                        <img style="margin-right: 10px;" width="50px" src="/assets/images/experiences/capgemini.jpg"
+                            alt="">
+                        <h5 style="margin-bottom: 0;">
+                            Capgemini
                         </h5>
                     </div>
                     <div>
