Add growthvision project without links

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -53,6 +53,43 @@
             </header>
         </div>
         <section class="spotlight">
+            <div class="image projectDirectLinks"><a><img src="/assets/images/projects/growthvision.png" alt="" /></a>
+            </div>
+            <div class="content">
+                <h2>Growth vision</h2>
+                <p>Application to predict the growth of given investments</p>
+                <ul style="display: flex;flex-wrap: wrap;justify-content: center;">
+                    <li class="language">
+                        <img src="/assets/images/skills/technologies/back-end/spring.svg" alt="">
+                        <p>Spring boot</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/images/skills/technologies/back-end/postgresql.svg" alt="">
+                        <p>PostgreSQL</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/images/skills/technologies/front-end/angular.svg" alt="">
+                        <p>Angular</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/images/skills/technologies/front-end/tailwind.svg" alt="">
+                        <p>Tailwind CSS</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/images/skills/technologies/tool/github-actions.svg" alt="">
+                        <p>Github actions</p>
+                    </li>
+                    <li class="language">
+                        <img src="/assets/images/skills/technologies/environment/docker.svg" alt="">
+                        <p>Docker</p>
+                    </li>
+                </ul>
+                <div class="projectLinks">
+                    <a target="_blank" href="/growth-vision">See details</a>
+                </div>
+            </div>
+        </section>
+        <section class="spotlight">
             <div class="image projectDirectLinks"><a><img src="/assets/images/projects/medialistmaker.png" alt="" /></a>
             </div>
             <div class="content">
@@ -270,6 +307,10 @@
                             <div class="language">
                                 <img src="/assets/images/skills/technologies/tool/jenkins.svg" alt="">
                                 <p>Jenkins</p>
+                            </div>
+                            <div class="language">
+                                <img src="/assets/images/skills/technologies/tool/github-actions.svg" alt="">
+                                <p>Github actions</p>
                             </div>
                         </div>
                     </li>
